# cpp-odyssey

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  PROGRESS.md  README.md  cpp_roadmap_complete.md  scaffold_prompt.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: Testing.cmake
docs/: README.md  resources.md  setup.md
docs/reflections/: README.md
project1-ping-pong/: CMakeLists.txt
project1-ping-pong/docs/: Makefile  README.md
project1-ping-pong/src/: SomeFile.cpp  SomeFile.h  main.cpp
project1-ping-pong/tests/: CMakeLists.txt  test_main.cpp
project2-chat-server/: CMakeLists.txt
project2-chat-server/docs/: README.md
project2-chat-server/tests/: CMakeLists.txt
project3-file-io/: CMakeLists.txt
project3-file-io/docs/: README.md
project3-file-io/tests/: CMakeLists.txt
project4-template-library/: CMakeLists.txt
project4-template-library/docs/: README.md
project4-template-library/tests/: CMakeLists.txt
project5-event-system/: CMakeLists.txt
project5-event-system/docs/: README.md
project5-event-system/tests/: CMakeLists.txt
project6-webrtc-cli/: CMakeLists.txt
project6-webrtc-cli/docs/: README.md
project6-webrtc-cli/tests/: CMakeLists.txt
scripts/: format_all.sh  lint_all.sh  run_all_tests.sh  setup_dev_env.sh
shared/: CMakeLists.txt
shared/include/common/: utils.hpp
