cmake_minimum_required(VERSION 3.20)

project(Project2ChatServer)

# Source files will be added here
# add_executable(${PROJECT_NAME} src/main.cpp)

# Include directories
# target_include_directories(${PROJECT_NAME} PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}/include
# )

# Link shared utilities if built
# if(TARGET SharedUtils)
#     target_link_libraries(${PROJECT_NAME} PRIVATE SharedUtils)
# endif()

# Platform-specific libraries
# if(WIN32)
#     target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32)
# endif()

# Threading
# find_package(Threads REQUIRED)
# target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads)

# Tests
# if(BUILD_TESTS)
#     add_subdirectory(tests)
# endif()

