cmake_minimum_required(VERSION 3.20)

project(Project4TemplateLibrary)

# Header-only library - no source files needed
# add_library(${PROJECT_NAME} INTERFACE)

# Include directories
# target_include_directories(${PROJECT_NAME} INTERFACE
#     ${CMAKE_CURRENT_SOURCE_DIR}/include
# )

# Tests
# if(BUILD_TESTS)
#     add_subdirectory(tests)
# endif()

# Examples
# add_subdirectory(examples)

# Benchmarks
# add_subdirectory(benchmarks)

