cmake_minimum_required(VERSION 3.20)

project(Project5EventSystem)

# Source files will be added here
# add_executable(${PROJECT_NAME} src/main.cpp)

# Include directories
# target_include_directories(${PROJECT_NAME} PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}/include
# )

# Link shared utilities if built
# if(TARGET SharedUtils)
#     target_link_libraries(${PROJECT_NAME} PRIVATE SharedUtils)
# endif()

# Tests
# if(BUILD_TESTS)
#     add_subdirectory(tests)
# endif()

